--- a/api/package.json
+++ b/api/package.json
@@ -13,6 +13,7 @@
     "jsonwebtoken": "^9.0.0",
     "multer": "^1.4.5-lts.1",
     "pg": "^8.11.0",
-    "rcon-client": "^4.0.0"
+    "rcon-client": "^4.0.0",
+    "stripe": "^14.0.0"
   }
 }
