feat: Add ECPay payment integration with ATM and CVS support
- Implement ECPay checkout flow with proper CheckMacValue generation
- Support ATM virtual account and convenience store payment methods
- Add test mode auto-approval feature (10 seconds delay)
- Create ECPay setup documentation (ECPAY_SETUP.md)
- Add ecpay-config.example.json for easy setup
- Update .gitignore to exclude sensitive configuration files
- Fix payment callback URLs to point to API endpoints

Test mode features:
- Automatic order approval after 10 seconds
- Proper CheckMacValue calculation using URL encoding
- Support for both ATM and CVS payment types

--- a/.gitignore
+++ b/.gitignore
@@ -18,11 +18,10 @@ build/
 api/uploads/*
 !api/uploads/.gitkeep
 
-# PayPal configuration (contains sensitive keys)
+# Payment gateway configurations (contains sensitive keys)
 api/paypal-config.json
-
-# Stripe configuration (contains sensitive keys)
 api/stripe-config.json
+api/ecpay-config.json
 
 # Currency configuration
 api/currency-config.json
@@ -59,6 +58,7 @@ checkout_response.txt
 
 # Test files
 test-*.html
+test-*.js
 *.test.js
 *.spec.js
 
