--- a/web/nginx.conf
+++ b/web/nginx.conf
@@ -10,7 +10,7 @@ server {
   index index.html;
 
   # API proxy - match API endpoints that accept JSON
-  location ~ ^/(products|auth|cart|payment-methods|admin|health) {
+  location ~ ^/(products|auth|cart|payment-methods|admin|health|ecpay) {
     proxy_pass http://api;
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
